k8s/authelia/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.yadon3141.com`)
      kind: Rule
      services:
        - name: authelia
          port: 80
